@@ -31,7 +31,7 @@
 #ifndef HTICK_H
 #define HTICK_H
 
-void processCommandLine(int argc, char **argv);
+int  processCommandLine(int argc, char **argv);
 void processConfig(void);
 
 #endif
